# Entra

./: .gitignore  CMakeLists.txt  ECS.bib  ECS.tex  Entra.cpp  LICENSE  Notes.md  README.md  Structure.md
include/: BaseSystem.h  Component.h  Entity.h  Entra.h  PoolAllocator.h  Registry.h  System.h
src/: Component.cpp  Registry.cpp
test/: Component.cpp  Entity.cpp  Entra.cpp  Registry.cpp  System.cpp
